--- a/css/categories.css
+++ b/css/categories.css
@@ -2,9 +2,7 @@
  	margin-left:15px;
   }
 
-  #content {
- 	padding-right:15px;
-  }
+  
 
   #sidebar.affix-top {
       position: static;
@@ -46,5 +44,21 @@
 }
 .m-panel-body {
     padding:15px;
+}
+/*  test */
+.row{
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-top:1%;
+}
+.btn-article{
+    background-color:#019875;
+    color:#ffffff;
+    
+}
+/*page 2*/
+.article-categorie{
+    
+ border:solid 1px red;   
 }
 
