administration - Ajout Oeuvre WIP

--- a/css/main.css
+++ b/css/main.css
@@ -514,7 +514,7 @@ i:after {
 
 footer
 {
-    margin-top: 50px;
+/*    margin-top: 50px;*/
     width: 100%;
     height: 81px;
 /*    position: absolute;*/
